# TonPlugIns-VoiceFX

./: .clang-tidy  .gitmodules  CMakeLists.txt  LICENSE.md
cmake/modules/: FindNVAFX.cmake  FindVSTSDK.cmake
cmake/templates/: installer-license.rtf  installer-vst2.iss.in  installer-vst3.iss.in  installer.iss  installer.iss.in  version.h  version.h.in  win.manifest.in
extra/: gen-win-release.bat  generate-release-vst2.bat  generate-release-vst3.bat  generate-release.bat
extra/proof/: latency-confirmation-paperwork.xlsx
extra/tests/: 000-original.pkf
extra/tests/Male Speaker - Semi-Busy Background/: Male Speaker - Semi-Busy Background - Filtered.pkf  Male Speaker - Semi-Busy Background - Unfiltered.pkf  Male Speaker - Semi-Busy Background.sesx
extra/tests/Male Speaker - Semi-Busy Background/Conformed Files/: 317533__2hear__car-horns 48000 1.pkf
extra/tests/Male Speaker - Semi-Busy Background/Male Speaker - Semi-Busy Background_Recorded/: Track 1_001.pkf
extra/tests/noise/: 277755__alexkandrell__train-int-moving-swedish-train-passenger-talking-useng.pkf  277755__alexkandrell__train-int-moving-swedish-train-passenger-talking-useng.txt  317533__2hear__car-horns.pkf  317533__2hear__car-horns.txt  522222__nox-sound__car-passby-exterior.pkf  522222__nox-sound__car-passby-exterior.txt
include/: audiobuffer.hpp  lib.hpp  nvidia-afx.hpp  nvidia-cuda-context.hpp  nvidia-cuda-stream.hpp  resampler.hpp  util-platform.hpp  win-d3d-context.hpp
interfaces/vst2/: CMakeLists.txt
interfaces/vst2/source/: vst2.cpp  vst2_effect.cpp  vst2_effect.hpp
interfaces/vst3/: CMakeLists.txt
interfaces/vst3/source/: vst3.cpp  vst3.hpp  vst3_effect_processor.hpp
other/: buffer-calc.ods
resources/: myEditor.uidesc
source/: audiobuffer.cpp  audiobuffer.hpp  exports_win.def  lib.cpp  lib.hpp  nvafx.cpp  nvafx.hpp  nvafx_denoiser.cpp  nvafx_denoiser.hpp  nvafx_voicedenoiser.cpp  nvafx_voicedenoiser.hpp  nvidia-afx-denoiser.cpp  nvidia-afx-denoiser.hpp  nvidia-afx-effect.cpp  nvidia-afx-effect.hpp  nvidia-afx.cpp  nvidia-afx.hpp  nvidia-cuda-context.cpp  nvidia-cuda-context.hpp  nvidia-cuda-memory.cpp  nvidia-cuda-memory.hpp  nvidia-cuda-stream.cpp  nvidia-cuda-stream.hpp  nvidia-cuda.cpp  nvidia-cuda.hpp  platform.cpp  platform.hpp  resampler.cpp  resampler.hpp  util-bitmask.hpp  util-library.cpp  util-library.hpp  util-platform.cpp  util-platform.hpp  voice_denoiser_channel.cpp  voice_denoiser_channel.hpp  voice_denoiser_controller.cpp  voice_denoiser_controller.hpp  voice_denoiser_processor.cpp  voice_denoiser_processor.hpp  (+22 more)
source/vst2/: vst2.cpp  vst2_effect.cpp  vst2_effect.hpp
source/vst3/: vst3.cpp  vst3.hpp  vst3_effect_controller.cpp  vst3_effect_controller.hpp  vst3_effect_processor.cpp  vst3_effect_processor.hpp
templates/: installer-vst2.iss.in  installer-vst3.iss.in  version.h.in  version.rc.in  win.manifest.in
